# moos-ivp-cthung

./: build.sh
missions/: svn-commit.tmp
missions/alder/: alder.moos
missions/course/lab_06/alpha_return/: alpha.bhv  alpha.moos  alpha.moos++  eventlog
missions/course/lab_06/alpha_return_now/: alpha.moos  alpha.moos++  eventlog
missions/course/lab_06/bravo_loiter/: bravo.bhv  bravo.moos  eventlog
missions/course/lab_06/bravo_loiter_dbl/: bravo.moos  eventlog
missions/course/lab_06/bravo_loiter_uuv/: bravo.bhv  bravo.moos  eventlog
missions/course/lab_07/alpha_bravo_pshare/: eventlog  shoreside.moos
missions/course/lab_07/alpha_pshare/: .LastOpenedMOOSLogDirectory  alpha.moos  eventlog
missions/course/lab_07/distributed_tsp/: meta_shoreside.moos  meta_vehicle.moos  plug_pGenPath.moos  plug_uFldNodeBroker.moos
missions/course/lab_07/henry_gilda_auto_refuel/: meta_shoreside.moos  meta_vehicle.moos
missions/course/lab_07/xrelay_pshare/: xrelay_apple.moos  xrelay_pear.moos
missions/course/lab_09/charlie_dana_message/: plug_uFldMessageHandler
missions/course/lab_09/charlie_dana_reassign/: meta_shoreside.moos  plug_uFldMessageHandler.moos
missions/course/lab_09/charlie_dana_recover/: meta_shoreside.moos  meta_vehicle.moos  plug_uTimerScript.moos
missions/course/lab_10/jake_kasper_baseline/: launch.sh  launch_vehicle.sh  meta_vehicle.bhv  meta_vehicle.moos
missions/course/lab_11/cowork/: plug_pHazardPathC_solo.moos  plug_uFldHazardMgrC.moos
missions/course/lab_11/simple_mission/: launch_vehicle.sh  meta_vehicle.bhv  plug_uFldHazardMgr.moos
missions/course/prime/: primes.moos
missions/cthung_thesis_mission/: launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_vehicle.moos  plug_pCheckSound.moos  plug_pNodeReporter.moos  plug_pStoreSound.moos  plug_uFldNodeBroker.moos  plug_uSimMarine.moos
missions/example/alder/: alder.bhv  alder.moos  alder.moos++
missions/lab_06/alpha_return/: .LastOpenedMOOSLogDirectory  eventlog
missions/lab_06/alpha_return_now/: eventlog
missions/lab_06/bravo_loiter/: eventlog
missions/lab_06/bravo_loiter_dbl/: bravo.bhv  eventlog
missions/lab_06/bravo_loiter_uuv/: eventlog
missions/lab_06/bravo_uuv_surface/: bravo.bhv  bravo.moos
missions/lab_07/alpha_bravo_pshare/: bravo.bhv  bravo.moos
missions/lab_07/alpha_pshare/: shoreside.moos
missions/lab_07/distributed_tsp/: meta_vehicle.bhv  plug_pShare.moos  plug_uTimerScript.moos
missions/lab_07/henry_gilda_auto_refuel/: meta_vehicle.bhv
missions/lab_07/henry_gilda_refuel/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
missions/lab_09/charlie_dana_message/: meta_shoreside.moos  meta_vehicle.moos
missions/lab_09/charlie_dana_nodecomms/: meta_shoreside.moos
missions/lab_09/charlie_dana_reassign/: launch.sh  plug_uFldNodeBroker.moos
missions/lab_10/jake_kasper_baseline/: launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.moos
missions/lab_11/cowork/: clean.sh  launch.sh  launch_vehicle.sh  meta_vehicle.bhv  meta_vehicle.moos  plug_pHazardPathC.moos  plug_uFldHazardMgrX.moos
missions/lab_13/alpha_zigleg/: eventlog
missions/ntu_workshop/: meta_vehicle.bhv
missions/ntu_workshop_field_test/: meta_shoreside.moos  meta_vehicle.bhv  plug_uFldNodeBroker.moos
missions/ntu_workshop_patten/: meta_shoreside.moos  meta_vehicle.bhv  plug_uSimMarine.moos
missions/thesis_mission/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_origin_warp.moos  plug_pMarinePID.moos
missions/workshop/ntu_workshop/: meta_shoreside.moos  plug_origin_warp.moos
missions/workshop/ntu_workshop_field_test/: launch_vehicle.sh  meta_vehicle.moos  plug_origin_warp.moos
missions/workshop/ntu_workshop_patten/: .LastOpenedMOOSLogDirectory  launch_vehicle.sh  meta_vehicle.moos  targ_shoreside.moos
missions/zeta/: zeta.moos
src/: CMakeLists.txt
src/lib_behaviors-cthung/: BHV_Pulse.cpp  BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/pBearingAngle/: BearingAngle.cpp  BearingAngle.h  BearingAngle_Info.cpp  BearingAngle_Info.h  CMakeLists.txt  main.cpp  pBearingAngle.moos
src/pCheckSound/: CMakeLists.txt  CheckSound.cpp  CheckSound.h  CheckSound_Info.cpp  CheckSound_Info.h  main.cpp  pCheckSound.moos
src/pCommunicationAngle_CTHung/: CMakeLists.txt  CommunicationAngle_CTHung.cpp  CommunicationAngle_CTHung.h  CommunicationAngle_CTHung_Info.cpp  CommunicationAngle_CTHung_Info.h  main.cpp  pCommunicationAngle_CTHung.moos  pp  soundTrack.cpp
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  GetPosition.cpp  main.cpp  pGenPath.moos
src/pHazardPath/: CMakeLists.txt  HazardPath.cpp  HazardPath.h  HazardPath_Info.cpp  HazardPath_Info.h  decidePath.cpp  main.cpp  pHazardPath.moos
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp  pOdometry.moos
src/pPlayAudio/: CMakeLists.txt  PlayAudio.cpp  PlayAudio.h  PlayAudio_Info.cpp  PlayAudio_Info.h  main.cpp  pPlayAudio.moos  play.sh
src/pPointAssign/: AssignPoint.cpp  CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp  pPointAssign.moos
src/pPrimeFactor/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  PrimeFactor.cpp  PrimeFactor.h  PrimeFactor_Info.cpp  PrimeFactor_Info.h  findPrime_2.cpp  getVal.cpp  main.cpp  pPrimeFactor.moos
src/pPrimeFactorTester/: CMakeLists.txt  PrimeFactorTester.cpp  PrimeFactorTester.h  PrimeFactorTester_Info.cpp  PrimeFactorTester_Info.h  getVal.cpp  main.cpp  primeTest.cpp
src/pStoreSound/: StoreSound_Info.cpp  pStoreSound.moos
src/pTest/: CMakeLists.txt  Test.cpp  Test.h  Test_Info.cpp  Test_Info.h  main.cpp  pTest.moos
src/pTrilateration/: CMakeLists.txt  Navigation.cpp  Trilateration.cpp  Trilateration.h  Trilateration_Info.cpp  Trilateration_Info.h  main.cpp  pTrilateration.moos
src/uFldHazardMgrC/: CMakeLists.txt  HazardMgr.cpp  HazardMgr.h  post2Shore.cpp  post2Vehicle.cpp
src/uFldHazardMgrX/: CMakeLists.txt  HazardMgr.cpp  HazardMgr.h  post2Shore.cpp  post2Vehicle.cpp
(+2 files in other folders)
